# BYO-thread-storage-azure-cosmos-for-foundry-agent

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/agents/: github-actions-expert.agent.md:Zone.Identifier
.specify/memory/: constitution.md
examples/: agent_chat.py  basic_usage.py  interactive_chat.py  kimi_k2_5_chat.py
skills/git-commit/: SKILL.md:Zone.Identifier
skills/github-issues/references/: dependencies.md:Zone.Identifier
specs/001-byo-thread-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-byo-thread-storage/checklists/: requirements.md
specs/001-byo-thread-storage/contracts/: thread_storage_api.md
src/: __init__.py  agent_integration.py  config.py  exceptions.py  models.py  thread_store.py
tests/integration/: test_e2e_validation.py
tests/unit/: test_agent_integration.py  test_config.py  test_exceptions.py  test_models.py  test_thread_store.py
